FIX: Chat header icon visibility and some ux tweaks

--- a/scss/mobile/custom-header.scss
+++ b/scss/mobile/custom-header.scss
@@ -11,15 +11,19 @@ html:not(.anon) {
         display: none;
       }
     }
-    @if $hide-chat == "true" {
-      body:not(.has-full-page-chat) & {
-        &.chat-header-icon {
-          display: none;
-        }
-      }
-    }    
     #toggle-current-user:not(.avatar-profile-trigger) {
       display: none;
+    }
+  }
+  @if $hide-chat == "true" {
+    body:not(.has-full-page-chat) {
+      .d-header-icons {
+        .header-dropdown-toggle {
+          &.chat-header-icon {
+            display: none;
+          }
+        }
+      }
     }
   }
 }
@@ -42,8 +46,7 @@ html:not(.anon) {
       flex-direction: column;
       overflow-y: auto;
       overflow-x: hidden;
-      padding: 0.75em 1em;
-      margin: 0;
+      margin: 0.5em 0.75em 1em;
     }
     li {
       display: flex;
@@ -58,7 +61,7 @@ html:not(.anon) {
         display: flex;
         width: 100%;
         height: 100%;
-        padding: 0.5em 0.25em;
+        padding: 0.75em 0.5em;
         margin: 0;
         align-items: center;
       }
